# Niratan-win

./: .gitignore  .gitmodules  CLAUDE.md  Hoshi.slnx  Niratan.slnx  README.md  agents.md  build-and-run.ps1  build-native.ps1  release.ps1  set-utf8-console.ps1
.claude/: settings.json
.claude/skills/: audio.md  build-native.md  build.md  check.md  dict-test.md  mvvm.md  new-page.md  new-service.md  run.md  test.md  verify-reader.md  xaml.md
.codex/: config.toml  hooks.json
.github/workflows/: build-and-package.yml  ci-unit-tests.yml
.superpowers/sdd/: final-review-fix-report.md  task-1-report.md  task-2-report.md  task-3-report.md  task-4-report.md  task-5-report.md
Hoshi/: App.xaml  App.xaml.cs  Hoshi.csproj  MainWindow.xaml  MainWindow.xaml.cs  app.manifest
Hoshi.Tests/: Hoshi.Tests.csproj
Hoshi.Tests/Models/: VideoPlaybackStateTests.cs
Hoshi.Tests/TestUtils/: FakeMessenger.cs  TempDirectory.cs
Hoshi/Enums/: AppMode.cs  AppPage.cs  LoadState.cs  NotificationSeverity.cs  ReaderTheme.cs  ResultKind.cs  ThemeMode.cs
Hoshi/Helpers/: AppDataHelper.cs  AppInfoHelper.cs  ResourceStringHelper.cs  WebView2EnvironmentHelper.cs
Hoshi/Models/: LogEntry.cs  (+11 more)
Niratan/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Niratan.csproj  app.manifest
Niratan.Tests/: Niratan.Tests.csproj
Packaging/: Hoshi.iss  Niratan.iss
docs/: ARCHITECTURE.md  CHANGELOG.md  THIRD_PARTY_NOTICES.md  VERIFICATION.md
native/hoshidicts_c_api/: CMakeLists.txt  hoshidicts_c_api.cpp  hoshidicts_c_api.h
scripts/: Ensure-NativeHoshidicts.ps1  Test-ReleaseScript.ps1
(+1295 files in other folders)
